<resources>
    <string name="app_name">Photo Text Translator</string>
    <string-array name="language_chose">
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Chinese(Simplified)</item>
        <item>Chinese(Traditional)</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hungarian</item>
        <item>Korean</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Turkish</item>
    </string-array>
    <string name="Translator_not_respond">Translator not respond</string>
    <string name="Translator_Error">Translator Error</string>
    <string name="First_take_photo">First take photo</string>
    <string name="Can_not_save_data_on_server">Can not save data on server</string>
    <string name="Saving_data_on_server">Saving data on server....</string>
    <string name="Text_not_found">Text not found</string>
    <string name="External_storage_not_available">External storage not available</string>
    <string name="Photo_saved">Photo saved</string>
    <string name="Wait_while_decoding">Wait while decoding....</string>
    <string name="Translating">Translating...</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="description">Description</string>
    <string name="app_description">App description</string>
    <string name="source" translatable="false">Source</string>
    <string name="open_source_licenses" translatable="false">Open source licenses</string>
    <string name="privacy_policy" translatable="false">Privacy policy</string>
    <string name="privacy_policy_info" translatable="false">Privacy policy info</string>
    <string name="infoApp">Info</string>
    <string name="application_developer">Application developer</string>
    <string name="infoAppDescription">Application developer:   www.wolfmobileapps.com</string>
    <string name="sourceDescription" translatable="false">Volley \n\nCopyright 2019 Google \n\nLicensed under the Apache License, Version 2.0 (the "License"); \nyou may not use this file except in compliance with the License.
You may obtain a copy of the License at \n\n    http://www.apache.org/licenses/LICENSE-2.0 \n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. \nSee the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="general">general</string>
    <string name="Set_the_text_horizontally">Set the text horizontally</string>
    <string name="decode">Decode</string>
    <string name="text_on_photo">Text in the picture:</string>
    <string name="set_text_on_photo">Set language in the picture:</string>
    <string name="text_translated_to">Set translation to language:</string>
    <string name="text_translated">Translated text: </string>
    <string name="translation_powered_by_yandex" translatable="false">Translation powered by Yandex</string>
</resources>