<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="100dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp">


            <TextView
                android:id="@+id/textViewGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/general"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewOnlyLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_background_my"
                app:layout_constraintTop_toBottomOf="@+id/textViewGeneral"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textViewLanguageOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_on_photo"
                app:layout_constraintStart_toStartOf="@+id/textViewGeneral"
                app:layout_constraintTop_toBottomOf="@+id/textViewOnlyLine" />

            <Spinner
                android:id="@+id/spinnerLanguageOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textViewLanguageOrigin"
                app:layout_constraintTop_toBottomOf="@+id/textViewLanguageOrigin" />

            <TextView
                android:id="@+id/textViewOnlyLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_background_my"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLanguageOrigin"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textViewLanguageTranslated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_translated_to"
                app:layout_constraintStart_toStartOf="@+id/textViewLanguageOrigin"
                app:layout_constraintTop_toBottomOf="@+id/textViewOnlyLine2" />

            <Spinner
                android:id="@+id/spinnerLanguageTranslated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textViewLanguageTranslated"
                app:layout_constraintTop_toBottomOf="@+id/textViewLanguageTranslated" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>