<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_main_my"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewTakePicture"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/item_selector"
        android:padding="4dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_call_api"
        app:layout_constraintEnd_toStartOf="@+id/image_view_call_api"
        app:layout_constraintTop_toTopOf="@+id/image_view_call_api"
        app:srcCompat="@drawable/icon_folder" />

    <ImageView
        android:id="@+id/imageViewOpenCamera"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/item_selector"
        android:padding="4dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_call_api"
        app:layout_constraintStart_toEndOf="@+id/image_view_call_api"
        app:layout_constraintTop_toTopOf="@+id/image_view_call_api"
        app:srcCompat="@drawable/icon_camera" />

    <Button
        android:id="@+id/image_view_call_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_custom"
        android:text="@string/decode"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_decode3" />

    <ImageView
        android:id="@+id/imageViewRotate"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_selector"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_rotate_right_white_24dp" />

    <LinearLayout
        android:id="@+id/lineraLayoutLangugageInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/item_round_corners"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_call_api">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLanguageOnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_text_on_photo"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/textViewLanguageOnPhotoTakeFromShar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"

                tools:text="Empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLanguageToTranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_translated_to"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/textViewLanguageToTranslateTakeFromShar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                tools:text="Empty" />
        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineraLayoutLangugageInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Set_the_text_horizontally"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewResultLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14sp"
                        android:textColor="@color/colorWhite"
                        tools:text="@string/text_on_photo" />

                    <TextView
                        android:id="@+id/textViewResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14sp"
                        android:textColor="@color/colorWhite"
                        tools:text="Empty" />

                    <ImageView
                        android:id="@+id/imageViewCopyAndSaveOrigin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/item_selector"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_content_copy_white_24dp"
                        tools:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewResultTranslatedLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14sp"
                        android:textColor="@color/colorWhite"
                        tools:text="@string/text_translated" />

                    <TextView
                        android:id="@+id/textViewResultTranslated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14sp"
                        android:textColor="@color/colorWhite"
                        tools:text="Empty" />

                    <LinearLayout
                        android:id="@+id/linearLayoutImageAndPoweredYandex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:visibility="invisible"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/imageViewCopyAndSaveTranslated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/item_selector"
                            app:srcCompat="@drawable/ic_content_copy_white_24dp" />

                        <TextView
                            android:id="@+id/textViewPoweredYandex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:background="@drawable/item_selector"
                            android:text="@string/translation_powered_by_yandex"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1490567689734833/5193016154"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.493"
        ads:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>